--- a/myshop/Areas/Admin/Views/Category/Create.cshtml
+++ b/myshop/Areas/Admin/Views/Category/Create.cshtml
@@ -16,7 +16,7 @@
     </div>
      <div class="mb-3">
         <label asp-for="Description"></label>
-        <input class="form-control" asp-for="Description" />
+        <textarea  class="form-control" asp-for="Description" ></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
      <div class="mb-3">
@@ -27,5 +27,12 @@
 </div>
 </div>
 @section scripts{
-        <partial name="_ValidationScriptsPartial" />
+    <script>
+        tinymce.init({
+            selector: 'textarea'
+          
+        });
+    </script>
+       @{ <partial name="_ValidationScriptsPartial" />}
+       
 }
