--- a/myshop/Areas/Admin/Views/Category/Index.cshtml
+++ b/myshop/Areas/Admin/Views/Category/Index.cshtml
@@ -5,12 +5,15 @@
    // Layout = "~/Views/Shared/_Dashboard.cshtml";
 }
 
-<div><a class="btn btn-primary" asp-action="Create">Create </a></div>
+<div class="text-end"><a class="btn btn-primary" asp-action="Create">
+    <i class="bi bi-plus-circle-fill"></i> 
+    Create </a></div>
 <br/>
 
-<table class=" table table-bordered table-striped" width="100%">
-    <thead>
+<table class="table table-bordered table-striped" width="100%">
+    <thead class="text-bold">
     <tr>
+
         <th>Name</th>
         <th>Description</th>
          <th>Created Date</th>
@@ -22,11 +25,11 @@
         {
             <tr>
                 <td>@item.Name</td>
-            <td>@item.Description</td>
+            <td>@Html.Raw(item.Description)</td>
             <td>@item.CreatedTime</td>
             <td>
-            <a asp-controller="Category" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success mx-2">Edit</a>
-                <a asp-controller="Category" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger mx-2">Delete</a>
+                <a asp-controller="Category" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success mx-2"> <i class="bi bi-pencil-square"></i></a>
+                    <a asp-controller="Category" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger mx-2"><i class="bi bi-trash-fill"></i> </a>
                 
             </td>
             </tr>
