--- a/myshop/Areas/Admin/Views/Product/Create.cshtml
+++ b/myshop/Areas/Admin/Views/Product/Create.cshtml
@@ -16,7 +16,7 @@
     </div>
      <div class="mb-3">
         <label asp-for="Description"></label>
-        <input class="form-control" asp-for="Description" />
+        <textarea class="form-control" asp-for="Description" ></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
      <div class="mb-3">
@@ -26,7 +26,7 @@
     </div>
      <div class="mb-3">
         <label asp-for="Img"></label>
-        <input type="file" name="file" class="form-control" id="file" />
+        <input type="file" name="file" class="form-control" id="file" onchange="fileimg(event);" />
         <span asp-validation-for="Img" class="text-danger"></span>
     </div>
      <div class="mb-3">
@@ -38,11 +38,30 @@
     </div>
      <div class="mb-3">
        <button type="submit" class="btn btn-primary"  >Submit</button>
-       <a asp-controller="Category" asp-action="Index" class="btn btn-secondary">Back to List</a>
+       <a asp-controller="Product" asp-action="Index" class="btn btn-secondary">Back to List</a>
     </div>
 </form>
 </div>
+ <div class="col-md-4">
+     <div class="container">
+         <img id="previewimg" width="300px" height="300px" />
+     </div>
+ </div>
 </div>
 @section scripts{
-            <partial name="_ValidationScriptsPartial" />
+        <script>
+            tinymce.init({
+                selector: 'textarea'
+
+            });
+    var fileimg=function(event)
+    {
+        var imgholder=document.getElementById("previewimg");
+            imgholder.src=URL.createObjectURL(event.target.files[0]);
+    }
+        </script>
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+
 }
