--- a/myshop/Areas/Admin/Views/Product/Edit.cshtml
+++ b/myshop/Areas/Admin/Views/Product/Edit.cshtml
@@ -18,7 +18,7 @@
     </div>
      <div class="mb-3">
         <label asp-for="Description"></label>
-        <input class="form-control" asp-for="Description" />
+        <textarea class="form-control" asp-for="Description" ></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
      <div class="mb-3">
@@ -40,7 +40,7 @@
     </div>
      <div class="mb-3">
        <button type="submit" class="btn btn-success"  >Save</button>
-       <a asp-controller="Product" asp-action="Index" class="btn btn-secondary">Back to List</a>
+       <a  asp-controller="Product" asp-action="Index" class="btn btn-secondary">Back to List</a>
     </div>
 </form>
 </div>
@@ -51,5 +51,14 @@
  </div>
 </div>
 @section scripts{
-                <partial name="_ValidationScriptsPartial" />
+        <script>
+            tinymce.init({
+                selector: 'textarea'
+
+            });
+        </script>
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+
 }
