--- a/myshop/Areas/Admin/Views/Product/Index.cshtml
+++ b/myshop/Areas/Admin/Views/Product/Index.cshtml
@@ -5,7 +5,7 @@
    // Layout = "~/Views/Shared/_Dashboard.cshtml";
 }
 
-<div><a class="btn btn-primary" asp-action="Create">Create </a></div>
+<div><a class="btn btn-primary" asp-action="Create"> <i class="bi bi-plus-circle-fill"></i> Create </a></div>
 <br/>
 
 <table id="mytable" class=" table table-bordered table-striped" width="100%">
