--- a/myshop/Views/Shared/_Dashboard.cshtml
+++ b/myshop/Views/Shared/_Dashboard.cshtml
@@ -10,9 +10,14 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="/css/adminlte.min.css">
+  <link rel="stylesheet" href="/css/adminlte.min.css">@*
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">*@
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
-  <link rel="stylesheet" href="//cdn.datatables.net/2.0.5/css/dataTables.dataTables.min.css"/>
+  <link rel="stylesheet" href="//cdn.datatables.net/2.0.7/css/dataTables.dataTables.min.css"/>
+
+  
+
 </head>
 <body class="hold-transition sidebar-mini">
 <!-- Site wrapper -->
@@ -204,7 +209,7 @@
           </li>
 
            <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a asp-area="Admin" asp-controller="Category"  class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Categories
@@ -215,7 +220,7 @@
           </li>
 
            <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a asp-area="Admin" asp-controller="Product"  class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Products
@@ -226,7 +231,7 @@
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a asp-area="Admin" asp-controller="Order" class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Orders
@@ -237,7 +242,7 @@
           </li>
          
          <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a asp-area="Admin" asp-controller="Users" class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Users
@@ -327,9 +332,10 @@
 <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="/js/adminlte.min.js"></script>
-<script src="//cdn.datatables.net/2.0.5/js/dataTables.min.js"></script>
+<script src="//cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.tiny.cloud/1/g28lhnxtlihu4l4a381gw7tz47voznshwbi10lmsvlekrfme/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
