--- a/myshop/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
+++ b/myshop/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
@@ -2,13 +2,17 @@
 
 <div class="container row pt-4">
     <div class="col-12 text-center">
-        <h1 class="text-primary text-center">Order Placed Successfully!</h1>
-        Your Order Number is : @Model <br/><br/>
-        <img src="~/images/lawn_leaf.jpg" width="65%" />
+        <h1 class="text-primary text-center">Thank You!</h1>
+       
+        <img src="~/img/confirm.jpg" style="height:500px ;width:500px " />
+        <hr/>
     </div>
-    <div class="col-12 text-center" style="color:maroon">
+    <div class="col-12 text-center">
         <br/>
-        Your order has been placed successfully! <br/>
+       <h3 class="text-primary text-center"> Your order Number is : @Model has been placed successfully!</h3> <br/>
+        <br/>
+        <br/>
+        <br/>
     </div>
 
 </div> 
