--- a/myshop/Areas/Customer/Views/Home/Index.cshtml
+++ b/myshop/Areas/Customer/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<Product>
-
+@using X.PagedList.Mvc.Core
+@using X.PagedList
   <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
+   <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     
                 @foreach (var item in Model)
@@ -21,7 +22,7 @@
                                     </div>
                                     <!-- Product actions-->
                                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add Cart</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="\Customer\Home\Details\@item.Id">View Details</a></div>
                                     </div>
                                 </div>
                                      </div>
@@ -30,6 +31,17 @@
                    
                     </div>
                     </div>
-                    </section>
+
+     <div class="container px-4 px-lg-5 mt-5">
+      <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+
+            @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page = page }), 
+         new PagedListRenderOptions {
+        LiElementClasses = new string[] { "page-item" },
+        PageClasses = new string[] { "page-link" }
+})
+      </div>
+      </div>
+  </section>
 
 
