--- a/myshop/Areas/Identity/Pages/Account/Login.cshtml
+++ b/myshop/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,20 +1,15 @@
 ﻿@page
 @model LoginModel
 
-<div class="card shadow border-0 mt-4">
-    <div class="card-header bg-secondary bg-gradient ml-0 py-4">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h2 class="py-2 text-white">Log in</h2>
-            </div>
-        </div>
-    </div>
-    <div class="card-body p-4">
-        <div class="row">
-            <div class="col-md-12">
+
+   
+
+    <div class="container p-4">
+        <div class="row pt-3">
+            <div class="col-md-6">
                 <section>
                     <form id="account" method="post">
-                        <h3 class="border-bottom pb-3 mb-4 text-secondary text-center">
+                        <h3 class="border-bottom pb-3 mb-4 ">
                             Use a local account to log in.
                         </h3>
                         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
@@ -41,17 +36,24 @@
                             <p>
                                 <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                             </p>
-                            <p>
+                            @*<p>
                                 <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                             </p>
                             <p>
                                 <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                            </p>
+                            </p>*@
                         </div>
                     </form>
                 </section>
             </div>
-            <div class="col-md-12 p-3 text-center">
+             <div class="col-md-6 col-md-offset-2">
+                    <section>
+                        <div class="divimg">
+                          <img src="~/img/login.jpg" class="logimge" style="margin-top:-40px"  />
+                          </div>
+                        </section>
+                        </div>
+           @* <div class="col-md-12 p-3 text-center">
                 <section>
                     <p class="divider-text d-flex pt-3">or</p>
 
@@ -82,10 +84,10 @@
                         }
                     }
                 </section>
-            </div>
+            </div>*@
         </div>
     </div>
-</div>
+
 
 
 @section Scripts {
