--- a/myshop/Views/Shared/_Customer.cshtml
+++ b/myshop/Views/Shared/_Customer.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@using myshop.Utilities
+@using myshop.Entities
+@inject   IHttpContextAccessor HttpContextAccessor
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -12,35 +16,53 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="~/customer/css/styles.css" rel="stylesheet" />
+         <link href="~/css/site.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="#!">MyShop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="\Customer\Home\Index">Home</a></li>
+                       @* <li class="nav-item"><a class="nav-link" href="#!">About</a></li>*@
+                       @if(User.Identity.IsAuthenticated)
+                       {
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Setting</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
+                                <li><a class="dropdown-item" href="#!">My  Orders</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                                <li><a class="dropdown-item" href="#!">Edit profile</a></li>
+                               @* <li><a class="dropdown-item" href="#!">New Arrivals</a></li>*@
                             </ul>
                         </li>
+                    }
                     </ul>
                     <partial name="_LoginPartial" />
+                      @if(User.Identity.IsAuthenticated)
+                       {
                     <form class="d-flex">
                         <a class="btn btn-outline-dark" href="/customer/Cart/Index">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                          @*  @await Component.InvokeAsync("ShoppingCart")*@
+                            @if(HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionKey)!=null)
+                            {
+                                <span class="badge bg-dark text-white ms-1 rounded-pill">@HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionKey)</span>
+
+                            }
+                            else
+                            {
+                               <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>    
+                            }
+                           
+
                         </a>
                     </form>
+                       }
                 </div>
             </div>
         </nav>
@@ -48,8 +70,8 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                    <h1 class="display-4 fw-bolder">Welcome to myshop</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">You can find Amazing Products with Good Prices</p>
                 </div>
             </div>
         </header>
