--- a/myshop/wwwroot/css/site.css
+++ b/myshop/wwwroot/css/site.css
@@ -20,3 +20,11 @@ html {
 body {
   margin-bottom: 60px;
 }
+.divimg{
+    background-size:100% 100%;
+}
+.logimge
+{
+    height:auto;
+    max-width:100%;
+}
