--- a/myshop/Views/Shared/_Customer.cshtml
+++ b/myshop/Views/Shared/_Customer.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Http
+﻿@* 5- add and inject*@
+@using Microsoft.AspNetCore.Http
 @using myshop.Utilities
 @using myshop.Entities
 @inject   IHttpContextAccessor HttpContextAccessor
@@ -45,11 +46,11 @@
                       @if(User.Identity.IsAuthenticated)
                        {
                     <form class="d-flex">
-                        <a class="btn btn-outline-dark" href="/customer/Cart/Index">
+                            <a class="btn btn-outline-dark"  asp-area="Customer" asp-controller="Cart" asp-action="Index" >
                             <i class="bi-cart-fill me-1"></i>
                             Cart
-                          @*  @await Component.InvokeAsync("ShoppingCart")*@
-                            @if(HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionKey)!=null)
+                            @await Component.InvokeAsync("ShoppingCart")
+                           @* @if(HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionKey)!=null)
                             {
                                 <span class="badge bg-dark text-white ms-1 rounded-pill">@HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionKey)</span>
 
@@ -58,7 +59,7 @@
                             {
                                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>    
                             }
-                           
+                           *@
 
                         </a>
                     </form>
