--- a/myshop/Views/Shared/_Customer.cshtml
+++ b/myshop/Views/Shared/_Customer.cshtml
@@ -27,19 +27,27 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="\Customer\Home\Index">Home</a></li>
+                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/Customer/Home/Index">Home</a></li>
                        @* <li class="nav-item"><a class="nav-link" href="#!">About</a></li>*@
                        @if(User.Identity.IsAuthenticated)
                        {
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Setting</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">My  Orders</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Edit profile</a></li>
-                               @* <li><a class="dropdown-item" href="#!">New Arrivals</a></li>*@
-                            </ul>
-                        </li>
+                        @if(User.IsInRole(SD.AdminRole))
+                        {
+               <li class="nav-item"><a class="nav-link active"  href="/Admin/Dashboard/Index">Dashboard</a></li>
+                             
+                    }
+                    else
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Setting</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#!">My  Orders</a></li>
+                                    <li><hr class="dropdown-divider" /></li>
+                                    <li><a class="dropdown-item" href="/Identity/Pages/Account/Manage">Edit profile</a></li>
+                                    @* <li><a class="dropdown-item" href="#!">New Arrivals</a></li>*@
+                                </ul>
+                            </li>
+                        }
                     }
                     </ul>
                     <partial name="_LoginPartial" />
