--- a/myshop/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/myshop/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,10 +9,12 @@
     }
 }
 
-<h1>Manage your account</h1>
 
-<div>
-    <h2>Change your account settings</h2>
+
+<div class="container">
+    <br />
+    <h4>Manage your account</h4>
+ @*   <h2>Change your account settings</h2>*@
     <hr />
     <div class="row">
         <div class="col-md-3">
@@ -20,6 +22,7 @@
         </div>
         <div class="col-md-9">
             @RenderBody()
+            <br />
         </div>
     </div>
 </div>
