--- a/myshop/Views/Shared/_Dashboard.cshtml
+++ b/myshop/Views/Shared/_Dashboard.cshtml
@@ -251,6 +251,26 @@
             </a>
 
           </li>
+           <li class="nav-item">
+            <a asp-area="Admin" asp-controller="Store" class="nav-link">
+              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <p>
+                Stores
+
+              </p>
+            </a>
+
+          </li>
+          <li class="nav-item">
+            <a asp-area="Admin" asp-controller="StoreProduct" class="nav-link">
+              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <p>
+                StoreProducts
+
+              </p>
+            </a>
+
+          </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
