--- a/myshop/Areas/Admin/Views/StoreProduct/Edit.cshtml
+++ b/myshop/Areas/Admin/Views/StoreProduct/Edit.cshtml
@@ -34,6 +34,13 @@
     </div>
 
      <div class="mb-3">
+
+        <label asp-for="PriceProduct"></label>
+        <input class="form-control" asp-for="PriceProduct" />
+        <span asp-validation-for="PriceProduct" class="text-danger"></span>
+    </div>
+
+     <div class="mb-3">
        <button type="submit" class="btn btn-primary"  >Submit</button>
        <a asp-controller="StoreProduct" asp-action="Index" class="btn btn-secondary">Back to List</a>
     </div>
