--- a/myshop/Areas/Admin/Views/Store/Create.cshtml
+++ b/myshop/Areas/Admin/Views/Store/Create.cshtml
@@ -34,6 +34,11 @@
         <input class="form-control" asp-for="Minum_order" />
         <span asp-validation-for="Minum_order" class="text-danger"></span>
     </div>
+       <div class="mb-3">
+        <label asp-for="IsMain"></label>
+        <input  type="checkbox" class="form-control" asp-for="IsMain" />
+        <span asp-validation-for="IsMain" class="text-danger"></span>
+    </div>
  
   
      <div class="mb-3">
