--- a/myshop/Areas/Admin/Views/StoreProduct/Index.cshtml
+++ b/myshop/Areas/Admin/Views/StoreProduct/Index.cshtml
@@ -14,7 +14,7 @@
         <th>StoreName</th>
          <th>ProductName</th>
          <th>Quantity</th>
-         <th>Price</th>
+         <th>Action</th>
          
     </tr>
     </thead>
