--- a/myshop/Areas/Admin/Views/Store/Edit.cshtml
+++ b/myshop/Areas/Admin/Views/Store/Edit.cshtml
@@ -33,6 +33,11 @@
         <label asp-for="Minum_order"></label>
         <input class="form-control" asp-for="Minum_order" />
         <span asp-validation-for="Minum_order" class="text-danger"></span>
+         <div class="mb-3">
+        <label asp-for="IsMain"></label>
+        <input  type="checkbox" class="form-control" asp-for="IsMain"  />
+        <span asp-validation-for="IsMain" class="text-danger"></span>
+    </div>
     </div>
 
 
