--- a/myshop/Areas/Admin/Views/Store/Index.cshtml
+++ b/myshop/Areas/Admin/Views/Store/Index.cshtml
@@ -15,7 +15,9 @@
         <th>Address</th>
          <th>PhoneNumber</th>
          <th>storekeeper</th>
+         
          <th>Minum_order</th>
+         <th>IsMain</th>
          <th>Action</th>
     </tr>
     </thead>
